# TiRiFiG

./: .gitignore  README.rst  pyproject.toml  version.py
TiRiFiG/: TiRiFiG_launcher.py  qt5_launcher.py  qt6_launcher.py
TiRiFiG/classes/: classes.py
