[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TiRiFiG"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.rst"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "S. Twum, P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [  
    'pyqt6',
    'pyFAT-astro',
    'TRM_errors>=0.1.1',
        
]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/TiRiFiG"

[project.scripts]
TiRiFiG = "TiRiFiG.TiRiFiG_launcher:main"


[tool.hatch.version]
path = "version.py"



[tool.hatch.build.targets.sdist]
include = [
    "/TiRiFiG",
]
